--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 db.sqlite3
 *.pyc
 */migrations/*
-*/__pycache__/*
-./django_cron/__pycache__/*
-./django_cron/management/__pycache__/*
-./django_cron/management/commands/__pycache__/*
-./django_cron/backends/__pycache__/*
-./django_cron/backends/lock/__pycache__/*
+agens/__pycache__/*
+video/__pycache__/*
+monitor/__pycache__/*
+overlay/__pycache__/*
+django_cron/__pycache__/*
+django_cron/management/__pycache__/*
+django_cron/management/commands/__pycache__/*
+django_cron/backends/__pycache__/*
+django_cron/backends/lock/__pycache__/*
