update gitignore to ignore django_cron

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 db.sqlite3
 *.pyc
 */migrations/*
+*/__pycache__/*.pyc
 agens/__pycache__/*
-video/__pycache__/*
-monitor/__pycache__/*
-overlay/__pycache__/*
-django_cron/__pycache__/*
-django_cron/management/__pycache__/*
-django_cron/management/commands/__pycache__/*
-django_cron/backends/__pycache__/*
-django_cron/backends/lock/__pycache__/*
+django_cron/*
